fix navigation show overflow-x

--- a/scaffolds/fusion-design-pro-js/src/global.scss
+++ b/scaffolds/fusion-design-pro-js/src/global.scss
@@ -4,4 +4,7 @@
 body {
   -webkit-font-smoothing: antialiased;
 }
+.next-shell-aside.next-shell-navigation{
+  overflow-x: unset !important;
+}
 
